# BlackMiscellen

./: .dockerignore  .editorconfig  .gitattributes  .pylintrc  BlackMiscellen.py  Dockerfile  README.md  checklist.yml  docker-compose.yml  embed.installer.py  miscellen-ui.x0.9.py  pyproject.toml  requirements.txt  restore.py  setup.py  update.py
App/: app.py
App/data/: reader.sh
App/data/api/: spotifyAPI.db  spotifyAPI.json
App/data/forbidden/: Khah.Jvssljavy.py  back.html
App/lib/: lib.md
App/lib/config/: Makefile.win  deb_miscellen.dev
App/lib/manifest/: manifest
App/settings/theme/: color_scheme.py
data/: package.json
data/api/: spotifyAPI.json
data/auth/instaloader/: instagram.details.json
data/forbidden/: backup.py  backup_gathering.sh
graph/: graph.md
modules/: module.html
modules/SocMEd/: Facebook.py  Instagram.py  Pinterest.py  Snapchat.py  Spotify.py  Threads.py  TikTok.py  Twitter.py  YouTube.py  soc.html
modules/convertion/: conversion
modules/generation/: generation
modules/torrent/: torrent.py
modules/translations/: translate
src/banners/: banner.py
src/banners/bannerList/: banner1.txt  banner2.txt  banner3.txt  banner4.txt  banner5.txt  banner6.txt
src/book/: bible.py
src/book/book-chapter/: 1Corinthians13_4-7.txt  Ephesians2_8-9.txt  Isaiah41-10.txt  Jeremiah29-11.txt  John3-16.txt  (+5 more)
src/icon/: icon.yml
temp/: temp.log.txt
test/banner_test/: banner_test.html  banner_test.py
test/spotify_test/: spotify.main_menu.test.py  spotifyDownloader.py  spotify_test.html
ui/: index.html  ui.css  ui.js  ui.py
(+16 files in other folders)
