[tool.poetry]
name = "BlackMiscellen"
version = "1.10.0"
description = "An Integrated Miscellaneuos toolkits"
authors = ["BlackRose: blackblazent@gmail.com]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
yt-dlp = "^0.1.0"
ffmpeg-python = "^2.0.12"
beautifulsoup4 = "4.12.2"
requests = "2.31.0"
colorama = "0.4.6"
opencv-python = "4.7.0"
geopy = "2.2.0"
matplotlib = "3.7.1"
dropbox = "11.33.0"
python-libtorrent = "2.0.6"
flask = "2.2.2"
pythonbible = "0.1.1"
torrent-client = "1.0.6"
blessings = "1.7"  #
spotify-dl = "0.4.0"
translate = "3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
